# dclaw-agent

./: .env.example  .gitignore  AGENTS.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  agent_test.db  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_tools.py  0003_teams.py  0004_memories.py  0005_marketplace_installs.py  0005_scheduled_tasks.py  0006_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  auth.py  marketplace.py  memories.py  runs.py  scheduled_tasks.py  teams.py  tools.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  agent.py  marketplace_install.py  memory.py  schedule.py  team.py  tool.py  types.py  user.py
backend/app/schemas/: agent.py  memory.py  schedule.py  team.py  tool.py  user.py
backend/app/services/: agent_runtime.py  execution.py  memory.py  multi_agent.py  run_supervisor.py  safe_expr.py  task_scheduler.py  tool_registry.py
backend/tests/: conftest.py  test_agents.py  test_marketplace.py  test_runs.py  test_runs_list.py  test_safe_expr.py  test_tools.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  (+1 more)
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
helm/: Chart.yaml  values.yaml
(+113 files in other folders)
